--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,8 +4,9 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
+  transition: background-color 0.3s
 }
 
 html.dark {
-  background: #121212;
+  background-color: #121212;
 }
